--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,9 @@
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
     "less": "^4.1.3",
     "svelte": "^3.52.0",
-    "tailwindcss": "^3.2.2",
     "vite": "^3.2.0"
+  },
+  "dependencies": {
+    "bulma": "^0.9.4"
   }
 }
