--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
 		"vite": "^3.1.0"
 	},
 	"dependencies": {
-		"bulma": "^0.9.4"
+		"@fortawesome/free-brands-svg-icons": "^6.2.1",
+		"@fortawesome/free-solid-svg-icons": "^6.2.1",
+		"bulma": "^0.9.4",
+		"svelte-fa": "^3.0.3"
 	},
 	"type": "module"
 }
