--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "axios": "^1.1.3",
     "bulma": "^0.9.4",
     "svelte-fa": "^3.0.3",
     "svelte-spa-router": "^3.3.0"
