--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "svelte-spa-router": "^3.3.0"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.2",
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
+    "dotenv": "^16.0.3",
     "svelte": "^3.52.0",
     "vite": "^3.2.3"
   }
